syntax = "proto3";

package profile;
option go_package="gprc.grpc_generated";
service CheckProfileService {
  rpc CheckProfileExists (ProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
  string profile_id = 1;
}

message ProfileResponse {
  bool exists = 1;
}